--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -48,10 +48,13 @@
   .about-project__container {
     max-width: 319px;
     margin-bottom: 93px;
+    justify-self: end;
+    margin-right: 15px;
   }
 
   .about-project__container:last-of-type {
-    justify-self: end;
+    justify-self: start;
+    margin-left: 15px;
   }
 }
 
@@ -59,6 +62,11 @@
   .about-project__container {
     max-width: 550px;
     margin-bottom: 110px;
+    margin-right: 20px;
+  }
+
+  .about-project__container:last-of-type {
+    margin-left: 20px;
   }
 }
 
