--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -20,10 +20,14 @@
   font-weight: 500;
   font-size: 15px;
   line-height: 18px;
-  color: #FFFFFF;
   margin: 14px 0 9px 14px;
   grid-column: 1/2;
   grid-row: 1/2;
+  width: calc(100% - 58px);
+  height: 18px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .movie-card__duration {
@@ -53,6 +57,12 @@
   .movie-card__image {
     height: 203px;
   }
+}
+
+.movie-card__link {
+  cursor: pointer;
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 .movie-card__save-btn {
