--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -21,3 +21,14 @@
     grid-template-columns: repeat(3, max-content);
   }
 }
+
+.movies-list__error-title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #FFFFFF;
+  max-width: 550px;
+  overflow-wrap: break-word;
+  text-align: center;
+  margin: 0;
+}
