--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -27,12 +27,12 @@
 
 .profile__form {
   display: grid;
-  min-width: 260px;
+  width: 260px;
 }
 
 @media screen and (min-width: 768px) {
   .profile__form {
-    min-width: 410px;
+    width: 410px;
   }
 }
 
@@ -44,12 +44,13 @@
   font-size: 12px;
   line-height: 15px;
   color: #FFFFFF;
-  margin: 379px 0 16px 0;
+  margin: calc(427px + 14px - (47px * 2)) 0 16px 0;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
   .profile__submit-btn {
-    margin-top: 210px;
+    margin-top: calc(258px + 14px - (47px * 2));
     font-size: 13px;
     line-height: 16px;
   }
@@ -57,8 +58,14 @@
 
 @media screen and (min-width: 1280px) {
   .profile__submit-btn {
-    margin-top: 220px;
+    margin-top: calc(268px + 14px - (47px * 2));
   }
+}
+
+.profile__submit-btn:disabled {
+  cursor: default;
+  opacity: 70%;
+  color: #EE3465;
 }
 
 .profile__exit-btn {
@@ -70,6 +77,7 @@
   line-height: 15px;
   color: #EE3465;
   margin-bottom: 40px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
