--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -55,8 +55,26 @@
   padding-top: 1px;
 }
 
-.search-form__input:focus ~ .search-form__checkbox-description {
+.search-form__input:focus~.search-form__checkbox-description {
   border-left: 1px solid #3DDC84;
+}
+
+.search-form__input-error {
+  position: absolute;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #EE3465;
+  display: none;
+  margin-top: calc(72px + 6px);
+}
+
+.search-form__input-error_visible {
+  display: block;
+}
+
+.search-form__input_error {
+  background-color: rgba(238, 52, 101, 0.1);
 }
 
 .search-form__search-btn {
